--- a/index.html
+++ b/index.html
@@ -11,10 +11,32 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 class="heading">heading</h1>
-        <img src="assets/images/logo.png" class="logo" alt="logo"/> Love Math
-    <div class="game-area">
+    <h1 class="heading"><img src="assets/images/logo.png" class="logo" alt="logo"/> Love Maths</h1>
 
+    <div class="game-area">
+        <div class="control-area">
+            <button class="btn btn--big btn--green">
+                <i class="fas fa-plus"></i>
+            </button>
+            <button class="btn btn--big btn--blue">
+                <i class="fas fa-minus"></i>
+            </button>
+            <button class="btn btn--big btn--orange">
+                <i class="fas fa-times"></i>
+            </button>
+            <button class="btn btn--big btn--red">
+                <i class="fas fa-divide"></i>
+            </button>
+        </div>
+        <div class="question-area">
+            <span id="operand1">0</span>
+            <span id="operator">x</span>
+            <span id="operand2">0</span>
+            <span>=</span>
+            <p class="answer-message">Enter Answer</p>
+            <input id="answer-box" type="number">
+        </div>
+        <button class="btn btn--grey">Submit Answer</button>
     </div>
     <div class="score-area">
         <p class="scores">
